<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#263238"
    android:screenOrientation="portrait"
    tools:context="app.pforpratim.fast.login.MainActivity" >

    <WebView
        android:id="@+id/webView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" />
    
    <WebView
        android:id="@+id/webView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:minWidth="100dp"
        android:text="@string/Stocko_mod" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:minWidth="100dp"
        android:text="@string/Logout" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_marginBottom="124dp"
        android:layout_marginRight="48dp"
        android:textColor="@android:color/white"
        android:text="@string/Nstatus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/button1"
        android:layout_marginBottom="100dp"
        android:layout_toRightOf="@+id/textView1"
        android:src="@drawable/isconnectedx" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/button1"
        android:layout_marginRight="14dp" />

</RelativeLayout>
